Merge branch 'Release-v1.19.0' of ssh.dev.azure.com:v3/dpwhotfsonline/DTLP/runner_shipment_service into feature/174308